--- a/src/app/manufaturer-hub-car-info/manufaturer-hub-car-info.component.html
+++ b/src/app/manufaturer-hub-car-info/manufaturer-hub-car-info.component.html
@@ -13,32 +13,21 @@
   <div class="container">
     <div class="card my-5">
       <div class="card-body">
-        <h5 class="card-title my-2">View vehicle</h5>
+        <h5 class="card-title my-2">View Vehicle ID#{{masterID}}</h5>
         <hr>
   
         <table class="table table-hover">
           <thead class="thead-light">
             <tr>
-              <th scope="col">Make
-              </th>
-              <th scope="col">Model
-              </th>
-              <th scope="col">Price
-              </th>
-              <th scope="col">Colour
-              </th>
-              <th scope="col">Seats
-                </th>
-              
-              <th scope="col">Weight
-              </th>
-              <th scope="col">Height
-              </th>
-              <th scope="col">Length
-              </th>
-              <th scope="col">Width
-              </th>
-  
+              <th scope="col">Make</th>
+              <th scope="col">Model</th>
+              <th scope="col">Price</th>
+              <th scope="col">Colour</th>
+              <th scope="col">Seats</th>
+              <th scope="col">Weight</th>
+              <th scope="col">Height</th>
+              <th scope="col">Length</th>
+              <th scope="col">Width</th>
             </tr>
           </thead>
           <tbody>
@@ -58,7 +47,7 @@
   
         <div class="row justify-content-end">
           <div class="col-2 mt-4">
-            <button routerLink="/manufacturer/stock" class="btn btn-outline-info">Back to all vehicles</button>
+            <button routerLink="/manufacturer/stock" class="btn btn-outline-info">Back To All Vehicles</button>
           </div>
         </div>
       </div>
