--- a/src/app/police-hub/police-hub.component.html
+++ b/src/app/police-hub/police-hub.component.html
@@ -13,7 +13,7 @@
 <div class="container">
   <div class="card my-5">
     <div class="card-body">
-      <h5 class="card-title my-5">Police Officer Options</h5>
+      <h5 class="card-title my-5">Police Officer Homepage</h5>
       <div class="row justify-content-center mb-4">
         <div class="col-lg-4 col-12 text-center">
           <button routerLink="/police/police-view" class="btn btn-outline-success btn-block" style="height: 80px;">View All Registered Vehicles <i class="fas fa-car ml-1"></i></button>
