--- a/src/app/manufaturer-hub-order-requests/manufaturer-hub-order-requests.component.html
+++ b/src/app/manufaturer-hub-order-requests/manufaturer-hub-order-requests.component.html
@@ -20,12 +20,9 @@
         <thead class="thead-light">
           <tr>
             <th scope="col">#</th>
-            <th scope="col">Model
-            </th>
-            <th scope="col">Client
-            </th>
-            <th scope="col">Colour
-            </th>
+            <th scope="col">Model</th>
+            <th scope="col">Client</th>
+            <th scope="col">Colour</th>
             <th scope="col">Create Request</th>
           </tr>
         </thead>
