--- a/src/app/police-hub-view-vehicles/police-hub-view-vehicles.component.css
+++ b/src/app/police-hub-view-vehicles/police-hub-view-vehicles.component.css
@@ -7,3 +7,9 @@ h5{
     height:50px;
     float:right;
 }
+
+p {
+    margin-left:10px;
+    font-size: 1.6rem !important;
+    text-align: left;
+}
