--- a/src/app/car-owner-car-new/car-owner-car-new.component.html
+++ b/src/app/car-owner-car-new/car-owner-car-new.component.html
@@ -4,8 +4,8 @@
     <img src="../../assets/car.png" width="30" height="30" class="d-inline-block align-top" alt=""> Vehicle Licensing Blockchain POC
   </a>
   <div>
-      <span class="mr-3">Welcome {{ownerName}}! [ID {{ownerID}}]</span>
-      <button class="btn btn-outline-warning mr-sm-2" routerLink="/">Sign Out</button>
+    <span class="mr-3">Welcome {{ownerName}}! [ID {{ownerID}}]</span>
+    <button class="btn btn-outline-warning mr-sm-2" routerLink="/">Sign Out</button>
   </div>
 </nav>
 
@@ -20,24 +20,29 @@
       <form class="w-75 mx-auto text-left">
         <div class="form-group">
           <label for="exampleInputVIN1">VIN</label>
-          <input type="text" [(ngModel)]="vehicle.VIN" class="form-control form-control-lg" id="exampleInputVIN1" aria-describedby="vinHelp" placeholder="Enter vin number" name="field1">
+          <input type="text" [(ngModel)]="vehicle.VIN" class="form-control form-control-lg" id="exampleInputVIN1" aria-describedby="vinHelp"
+            placeholder="Enter vin number" name="field1">
         </div>
         <div class="form-group">
           <label for="exampleInputMake1">Make</label>
-          <input type="text" [(ngModel)]="vehicle.make" class="form-control form-control-lg" id="exampleInputMake1" aria-describedby="makeHelp" placeholder="Enter the vehicle's make" name="field2">
+          <input type="text" [(ngModel)]="vehicle.make" class="form-control form-control-lg" id="exampleInputMake1" aria-describedby="makeHelp"
+            placeholder="Enter the vehicle's make" name="field2">
         </div>
         <div class="form-group">
           <label for="exampleInputModel1">Model</label>
-          <input type="text" [(ngModel)]="vehicle.model" class="form-control form-control-lg" id="exampleInputModel1" aria-describedby="modelHelp" placeholder="Enter the vehicle's model" name="field3">
+          <input type="text" [(ngModel)]="vehicle.model" class="form-control form-control-lg" id="exampleInputModel1" aria-describedby="modelHelp"
+            placeholder="Enter the vehicle's model" name="field3">
         </div>
         <div class="form-group">
           <label for="exampleInputLicense1">License</label>
-          <input type="text" [(ngModel)]="vehicle.plate" class="form-control form-control-lg" id="exampleInputLicense1" aria-describedby="licenseHelp" placeholder="Enter the vehicle's license plate" name="field4">
+          <input type="text" [(ngModel)]="vehicle.plate" class="form-control form-control-lg" id="exampleInputLicense1" aria-describedby="licenseHelp"
+            placeholder="Enter the vehicle's license plate" name="field4">
         </div>
 
         <div class="form-group">
           <label for="exampleInputColour1">Colour</label>
-          <input type="text" [(ngModel)]="vehicle.colour" class="form-control form-control-lg" id="exampleInputColour1" aria-describedby="colorHelp" placeholder="Enter the vehicle's colour" name="field5">
+          <input type="text" [(ngModel)]="vehicle.colour" class="form-control form-control-lg" id="exampleInputColour1" aria-describedby="colorHelp"
+            placeholder="Enter the vehicle's colour" name="field5">
         </div>
 
         <div class="form-group">
@@ -45,7 +50,7 @@
           <input type="text" class="form-control form-control-lg" id="exampleInputInsurance1" aria-describedby="insuranceHelp" placeholder="Enter the vehicle's insurance number">
         </div>
         <div id="buttonRow">
-          <button id="button1"(click)="addCar(vehicle)" class="btn btn-primary">Submit</button>
+          <button id="button1" (click)="addCar(vehicle)" class="btn btn-primary">Submit</button>
           <button id="button2" routerLink="/car-owner" class="btn btn-outline-primary">Back</button>
         </div>
       </form>
