--- a/src/app/police-hub-report/police-hub-report.component.html
+++ b/src/app/police-hub-report/police-hub-report.component.html
@@ -1,13 +1,13 @@
 <!-- Navbar -->
 <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
-    <a routerLink="/" class="navbar-brand">
-      <img src="../../assets/car.png" width="30" height="30" class="d-inline-block align-top" alt=""> Vehicle Licensing Blockchain POC
-    </a>
-    <div>
-      <span class="mr-3">Welcome {{officerName}} [ID {{badgeID}}]!</span>
-      <button class="btn btn-outline-warning mr-sm-2" routerLink="/">Sign Out</button>
-    </div>
-  </nav>
+  <a routerLink="/" class="navbar-brand">
+    <img src="../../assets/car.png" width="30" height="30" class="d-inline-block align-top" alt=""> Vehicle Licensing Blockchain POC
+  </a>
+  <div>
+    <span class="mr-3">Welcome {{officerName}} [ID {{badgeID}}]!</span>
+    <button class="btn btn-outline-warning mr-sm-2" routerLink="/">Sign Out</button>
+  </div>
+</nav>
 
 <!-- Container for page -->
 <div class="container">
@@ -22,45 +22,46 @@
           <option value="1">Supsicious</option>
           <option value="2">Stolen</option>
         </select>
-          <div class="form-group">
-            <label for="exampleInputVIN1">VIN</label>
-            <input type="text" class="form-control form-control-lg" id="exampleInputVIN1" aria-describedby="vinHelp" placeholder="Enter vin number" [(ngModel)]="inputVIN" name="invin">
-          </div>
-          <div class="form-group">
-            <label for="exampleInputMake1">Make</label>
-            <input type="text" class="form-control form-control-lg" id="exampleInputMake1" aria-describedby="makeHelp" placeholder="Enter the vehicle's make">
-          </div>
-          <div class="form-group">
-            <label for="exampleInputModel1">Model</label>
-            <input type="text" class="form-control form-control-lg" id="exampleInputModel1" aria-describedby="modelHelp" placeholder="Enter the vehicle's model">
-          </div>
-          <div class="form-group">
-            <label for="exampleInputLicense1">License</label>
-            <input type="text" class="form-control form-control-lg" id="exampleInputLicense1" aria-describedby="licenseHelp" placeholder="Enter the vehicle's license plate">
-          </div>
-  
-          <div class="form-group">
-            <label for="exampleInputColour1">Colour</label>
-            <input type="text" class="form-control form-control-lg" id="exampleInputColour1" aria-describedby="colorHelp" placeholder="Enter the vehicle's colour">
-          </div>
-          <div class="form-group">
-              <label for="exampleInputReason1">Reason for Reporting</label>
-              <textarea type="text" class="form-control form-control-lg" id="exampleInputReason1" aria-describedby="reasonHelp" placeholder="Enter the reason for reporting"></textarea>
-            </div>
-    
-            <div class="form-group">
-              <label for="exampleInputNotes1">Additional Notes</label>
-              <textarea type="text" class="form-control form-control-lg" id="exampleInputNotes1" aria-describedby="notesHelp" placeholder="Enter additional notes"></textarea>
-            </div>
-          
-        <div id ="buttonRow">
-          <button id="button1"(click)="fileReport(selector, inputVIN)" class="btn btn-primary" >Submit</button>
-          <button id="button2" routerLink="/police" class="btn btn-outline-primary" >Back</button>
+        <div class="form-group">
+          <label for="exampleInputVIN1">VIN</label>
+          <input type="text" class="form-control form-control-lg" id="exampleInputVIN1" aria-describedby="vinHelp" placeholder="Enter vin number"
+            [(ngModel)]="inputVIN" name="invin">
+        </div>
+        <div class="form-group">
+          <label for="exampleInputMake1">Make</label>
+          <input type="text" class="form-control form-control-lg" id="exampleInputMake1" aria-describedby="makeHelp" placeholder="Enter the vehicle's make">
+        </div>
+        <div class="form-group">
+          <label for="exampleInputModel1">Model</label>
+          <input type="text" class="form-control form-control-lg" id="exampleInputModel1" aria-describedby="modelHelp" placeholder="Enter the vehicle's model">
+        </div>
+        <div class="form-group">
+          <label for="exampleInputLicense1">License</label>
+          <input type="text" class="form-control form-control-lg" id="exampleInputLicense1" aria-describedby="licenseHelp" placeholder="Enter the vehicle's license plate">
         </div>
 
-        </form>
-  
-      
+        <div class="form-group">
+          <label for="exampleInputColour1">Colour</label>
+          <input type="text" class="form-control form-control-lg" id="exampleInputColour1" aria-describedby="colorHelp" placeholder="Enter the vehicle's colour">
+        </div>
+        <div class="form-group">
+          <label for="exampleInputReason1">Reason for Reporting</label>
+          <textarea type="text" class="form-control form-control-lg" id="exampleInputReason1" aria-describedby="reasonHelp" placeholder="Enter the reason for reporting"></textarea>
+        </div>
+
+        <div class="form-group">
+          <label for="exampleInputNotes1">Additional Notes</label>
+          <textarea type="text" class="form-control form-control-lg" id="exampleInputNotes1" aria-describedby="notesHelp" placeholder="Enter additional notes"></textarea>
+        </div>
+
+        <div id="buttonRow">
+          <button id="button1" (click)="fileReport(selector, inputVIN)" class="btn btn-primary">Submit</button>
+          <button id="button2" routerLink="/police" class="btn btn-outline-primary">Back</button>
+        </div>
+
+      </form>
+
+
 
       <div class="row justify-content-end">
         <a class="col-lg-1 col-5" href="#" style="width: 67px!important;max-width: 67px!important;">
