--- a/src/app/police-hub-view-details/police-hub-view-details.component.html
+++ b/src/app/police-hub-view-details/police-hub-view-details.component.html
@@ -19,28 +19,17 @@
       <table class="table table-hover">
         <thead class="thead-light">
           <tr>
-            <th scope="col">Make
-            </th>
-            <th scope="col">Model
-            </th>
-            <th scope="col">License
-            </th>
-            <th scope="col">Colour
-            </th>
-            <th scope="col">Insurance
-            </th>
-            <th scope="col">Insr. Expiry
-            </th>
-            <th scope="col">Seats
-            </th>
-            <th scope="col">Weight
-            </th>
-            <th scope="col">Height
-            </th>
-            <th scope="col">Length
-            </th>
-            <th scope="col">Width
-            </th>
+            <th scope="col">Make</th>
+            <th scope="col">Model</th>
+            <th scope="col">License</th>
+            <th scope="col">Colour</th>
+            <th scope="col">Insurance</th>
+            <th scope="col">Insr. Expiry</th>
+            <th scope="col">Seats</th>
+            <th scope="col">Weight</th>
+            <th scope="col">Height</th>
+            <th scope="col">Length</th>
+            <th scope="col">Width</th>
 
           </tr>
         </thead>
