--- a/src/app/police-hub/police-hub.component.html
+++ b/src/app/police-hub/police-hub.component.html
@@ -16,13 +16,19 @@
       <h5 class="card-title my-5">Police Officer Homepage</h5>
       <div class="row justify-content-center mb-4">
         <div class="col-lg-4 col-12 text-center">
-          <button routerLink="/police/police-view" class="btn btn-outline-success btn-block" style="height: 80px;">View All Registered Vehicles <i class="fas fa-car ml-1"></i></button>
+          <button routerLink="/police/police-view" class="btn btn-outline-success btn-block" style="height: 80px;">View All Registered Vehicles
+            <i class="fas fa-car ml-1"></i>
+          </button>
         </div>
         <div class="col-lg-4 col-12 text-center">
-          <button routerLink="/police/police-report" class="btn btn-outline-primary btn-block" style="height: 80px;">Report a Vehicle as Stolen or Suspicious <i class="fas fa-key ml-1"></i></button>
+          <button routerLink="/police/police-report" class="btn btn-outline-primary btn-block" style="height: 80px;">Report a Vehicle as Stolen or Suspicious
+            <i class="fas fa-key ml-1"></i>
+          </button>
         </div>
         <div class="col-lg-4 col-12 text-center">
-          <button routerLink="/police/police-impound" class="btn btn-outline-secondary btn-block" style="height: 80px;">Report Impounded Car <i class="fas fa-truck-loading ml-1"></i></button>
+          <button routerLink="/police/police-impound" class="btn btn-outline-secondary btn-block" style="height: 80px;">Report Impounded Car
+            <i class="fas fa-truck-loading ml-1"></i>
+          </button>
         </div>
       </div>
 
