--- a/src/app/register-page/register-page.component.html
+++ b/src/app/register-page/register-page.component.html
@@ -53,7 +53,7 @@
         </div>
 
         <div id="buttonRow">
-          <button id="button1" (click)="createUser(selector)" [disabled]="selector=='undefined'" class="btn btn-primary">Submit</button>
+          <button id="button1" (click)="createUser(selector)" [disabled]="selector=='undefined'" class="btn btn-primary">Create Account</button>
           <button id="button2" routerLink="/" class="btn btn-outline-primary">Back</button>
         </div>
       </form>
