--- a/src/app/car-owner-car-new/car-owner-car-new.component.html
+++ b/src/app/car-owner-car-new/car-owner-car-new.component.html
@@ -44,11 +44,19 @@
           <input type="text" [(ngModel)]="vehicle.colour" class="form-control form-control-lg" id="exampleInputColour1" aria-describedby="colorHelp"
             placeholder="Enter the vehicle's colour" name="field5">
         </div>
-
-        <div class="form-group">
-          <label for="exampleInputInsurance1">Insurance Transaction Number</label>
-          <input type="text" class="form-control form-control-lg" id="exampleInputInsurance1" aria-describedby="insuranceHelp" placeholder="Enter the vehicle's insurance number">
+        <div id="datePick">
+          <label for="exampleInputIns1">Insurance Expiry</label><br/>
+          <mat-form-field>
+            <input matInput [matDatepicker]="picker" placeholder="Choose a date" [(ngModel)]="theDate" name="inTheDate">
+            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker #picker></mat-datepicker>
+          </mat-form-field>
         </div>
+        <!--
+        <div class="form-group">
+          <label for="exampleInputInsurance1">Insurance Expiration Date</label>
+          <input type="text" class="form-control form-control-lg" id="exampleInputInsurance1" aria-describedby="insuranceHelp" placeholder="Enter the vehicle's insurance number">
+        </div>-->
         <div id="buttonRow">
           <button id="button1" (click)="addCar(vehicle)" class="btn btn-primary">Submit</button>
           <button id="button2" routerLink="/car-owner" class="btn btn-outline-primary">Back</button>
