--- a/src/app/car-owner-car-edit/car-owner-car-edit.component.html
+++ b/src/app/car-owner-car-edit/car-owner-car-edit.component.html
@@ -47,10 +47,14 @@
             name="colourBox" [(ngModel)]="myVehicle.colour">
         </div>
 
-        <div class="form-group">
-          <label for="exampleInputInsurance1">Insurance Transaction Number</label>
-          <input type="text" class="form-control form-control-lg" id="exampleInputInsurance1" aria-describedby="insuranceHelp" placeholder="Enter the vehicle's insurance number"
-            value="{{vehicleInsurance}}">
+        <div id="datePick">
+          <label for="exampleInputIns1">Insurance Expiry</label>
+          <br/>
+          <mat-form-field>
+            <input matInput [matDatepicker]="picker" placeholder="Choose a date" [(ngModel)]="theDate" name="inTheDate">
+            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker #picker></mat-datepicker>
+          </mat-form-field>
         </div>
 
         <div id="buttonRow">
