order request fix

--- a/src/app/manufaturer-hub-new-car/manufaturer-hub-new-car.component.html
+++ b/src/app/manufaturer-hub-new-car/manufaturer-hub-new-car.component.html
@@ -14,7 +14,7 @@
   <div class="card my-5 text-center">
     <div class="card-body">
 
-      <h5 class="card-title mb-2 mt-5">Register A New Vehicle</h5>
+      <h5 class="card-title mb-2 mt-5">Create A New Vehicle</h5>
       <h6 class="card-title mb-2 mt-5" name="statusBar" *ngIf="displayMessage!='undefined'">{{displayMessage}}</h6>
 
       <!-- Form -->
