--- a/src/app/manufaturer-hub-order-requests/manufaturer-hub-order-requests.component.html
+++ b/src/app/manufaturer-hub-order-requests/manufaturer-hub-order-requests.component.html
@@ -30,10 +30,10 @@
           <tr *ngFor="let row of tableData">
             <th scope="row">1</th>
             <td>{{row.make}} {{row.model}}</td>
-            <td>{{row.owner}}</td>
+            <td>{{row.ownerDisplayName}}</td>
             <td>{{row.colour}}</td>
             <td>
-              <button [routerLink]="['/manufacturer/new-car']" [queryParams]="{make:row.make,model:row.model,colour:row.colour}" type="button"
+              <button [routerLink]="['/manufacturer/new-car']" [queryParams]="{make:row.make,model:row.model,colour:row.colour,VIN:row.VIN,plate:row.plate,owner:row.owner.toString().substring(39)}" type="button"
                 class="btn btn-link">Create</button>
             </td>
           </tr>
