end of day aug 9

--- a/src/app/manufaturer-hub-new-car/manufaturer-hub-new-car.component.html
+++ b/src/app/manufaturer-hub-new-car/manufaturer-hub-new-car.component.html
@@ -45,7 +45,7 @@
           <input type="text" [(ngModel)]="vehicle.colour" class="form-control form-control-lg" id="exampleInputColour1" aria-describedby="colorHelp"
             placeholder="Enter the vehicle's colour" name="trait5">
         </div>
-
+        <!--
         <div class="form-check">
           <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
           <label class="form-check-label" for="defaultCheck1">
@@ -63,7 +63,7 @@
           <label class="form-check-label" for="defaultCheck1">
             Additional feature 3
           </label>
-        </div>
+        </div>-->
         <div id="buttonRow">
           <button id="button1" class="btn btn-primary" (click)="addCar(vehicle)">Submit</button>
           <button id="button2" routerLink="/manufacturer" class="btn btn-outline-primary">Back</button>
