--- a/src/app/manufaturer-hub-order-requests/manufaturer-hub-order-requests.component.html
+++ b/src/app/manufaturer-hub-order-requests/manufaturer-hub-order-requests.component.html
@@ -61,6 +61,10 @@
         </tbody>
       </table>
 
+      <p *ngIf="tableData.length==0">
+        There Are No Requested Vehicles
+      </p>
+
       <div class="row justify-content-end">
         <div class="col-1 mt-4">
           <button id="button1" routerLink="/manufacturer" class="btn btn-outline-primary">Back</button>
