--- a/src/app/car-owner-car-edit/car-owner-car-edit.component.html
+++ b/src/app/car-owner-car-edit/car-owner-car-edit.component.html
@@ -59,7 +59,7 @@
 
         <div id="buttonRow">
           <button id="button1" (click)="editCar(newVehicle)" class="btn btn-primary">Request Changes</button>
-          <button id="button2" routerLink="/car-owner" class="btn btn-outline-primary">Back</button>
+          <button id="button2" (click)="navigateBack()" class="btn btn-outline-primary">Back</button>
         </div>
 
       </form>
