--- a/src/app/manufaturer-hub-new-car/manufaturer-hub-new-car.component.html
+++ b/src/app/manufaturer-hub-new-car/manufaturer-hub-new-car.component.html
@@ -66,7 +66,7 @@
         </div>-->
         <div id="buttonRow">
           <button id="button1" class="btn btn-primary" (click)="addCar(vehicle)">Submit</button>
-          <button id="button2" routerLink="/manufacturer" class="btn btn-outline-primary">Back</button>
+          <button id="button2" (click)="navigateBack()" class="btn btn-outline-primary">Back</button>
 
         </div>
       </form>
