basic help page

--- a/src/app/register-page/register-page.component.html
+++ b/src/app/register-page/register-page.component.html
@@ -1,9 +1,9 @@
 <!-- Navbar -->
 <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
-  <a routerLink="/" class="navbar-brand">
+  <a  class="navbar-brand">
     <img src="../../assets/car.png" width="30" height="30" class="d-inline-block align-top" alt=""> Vehicle Licensing Blockchain POC
   </a>
-  <button class="btn btn-outline-info mr-sm-2">Help</button>
+  <button routerLink="/help" class="btn btn-outline-info mr-sm-2">Help</button>
 </nav>
 
 <!-- Container for page -->
