--- a/src/app/car-owner-order/car-owner-order.component.css
+++ b/src/app/car-owner-order/car-owner-order.component.css
@@ -6,7 +6,7 @@ h5{
 h6{
     font-size: 1.5rem !important;
     text-align: center !important;
-    margin-top:10px
+    margin-top:10px;
 }
 
 #button1{
