--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -3,7 +3,7 @@
   <a routerLink="/" class="navbar-brand">
     <img src="../../assets/car.png" width="30" height="30" class="d-inline-block align-top" alt=""> Vehicle Licensing Blockchain POC
   </a>
-  <button class="btn btn-outline-info mr-sm-2">Help</button>
+  <button routerLink="/help" class="btn btn-outline-info mr-sm-2">Help</button>
 </nav>
 
 <!-- Container for page -->
