Help page minor changes & removal of terms&privacy

--- a/src/app/help/help.component.html
+++ b/src/app/help/help.component.html
@@ -11,11 +11,13 @@
     <div class="card my-5 text-center">
       <div class="card-body">
         <h5 class="card-title mb-2 mt-5">Help</h5>
-        <p class="card-text mb-4">For a full documentation on the project and all things blockchain you can <a href="https://docs.google.com/document/d/17rmeDU_8xo3CKG42QsKG3iShd4CN0aqx_XT7qKZTSoo">visit here</a></p>
+        <p class="card-text mb-4">For a full documentation on the project and all things blockchain you can <a href="https://docs.google.com/document/d/17rmeDU_8xo3CKG42QsKG3iShd4CN0aqx_XT7qKZTSoo" target="_blank">visit here</a></p>
         <div>
           <button id="button1" (click)="navigateBack()" class="btn btn-outline-primary" >
             Back</button>
         </div>
+
+        <!--
         <div class="row justify-content-end">
           <a class="col-lg-1 col-5" href="#" style="width: 67px!important;max-width: 67px!important;">
             <small>Terms</small>
@@ -25,7 +27,7 @@
             <small>Privacy</small>
           </a>
         </div>
-  
+        -->
       </div>
     </div>
   </div>
