--- a/src/app/car-owner-car-edit/car-owner-car-edit.component.html
+++ b/src/app/car-owner-car-edit/car-owner-car-edit.component.html
@@ -53,7 +53,7 @@
           <mat-form-field>
             <input matInput [matDatepicker]="picker" placeholder="Choose a date" [(ngModel)]="theDate" name="inTheDate">
             <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-            <mat-datepicker #picker></mat-datepicker>
+            <mat-datepicker #picker (yearSelected)="2019"></mat-datepicker>
           </mat-form-field>
         </div>
 
