--- a/src/app/manufaturer-hub-new-car/manufaturer-hub-new-car.component.html
+++ b/src/app/manufaturer-hub-new-car/manufaturer-hub-new-car.component.html
@@ -15,7 +15,7 @@
     <div class="card-body">
 
       <h5 class="card-title mb-2 mt-5">Create A New Vehicle</h5>
-      <h6 class="card-title mb-2 mt-5" name="statusBar" *ngIf="displayMessage!='undefined'">{{displayMessage}}</h6>
+      <div class="alert alert-warning w-75 mx-auto" role="alert" name="statusBar" *ngIf="displayMessage!='undefined'">{{displayMessage}}</div>
 
       <!-- Form -->
       <form class="w-75 mx-auto text-left">
