--- a/src/app/manufaturer-hub-sell-car/manufaturer-hub-sell-car.component.html
+++ b/src/app/manufaturer-hub-sell-car/manufaturer-hub-sell-car.component.html
@@ -17,7 +17,7 @@
       <h6 class="my-2" style="text-align: center">VIN: {{vehicleVIN}}</h6>
       <hr>
 
-      <div *ngIf="displayMessage!='undefined'" class="alert alert-warning w-75 mx-auto" role="alert">
+      <div *ngIf="displayMessage!='undefined'" class="alert alert-warning w-75 mx-auto" role="alert" style="text-align:center!important;">
         {{displayMessage}}
       </div>
 
