--- a/src/app/register-page/register-page.component.html
+++ b/src/app/register-page/register-page.component.html
@@ -14,7 +14,7 @@
       <h6 class="card-title mb-2 mt-5">Already Have An Account?
         <a routerLink="/login">Sign In.</a>
       </h6>
-      <h4 class="card-title mb-2 mt-5" name="statusBar" *ngIf="displayMessage!='undefined'">{{displayMessage}}</h4>
+      <div class="alert alert-warning w-75 mx-auto" role="alert" name="statusBar" *ngIf="displayMessage!='undefined'">{{displayMessage}}</div>
 
       <!-- Form -->
       <form class="w-75 mx-auto text-left">
